# rust_fullstack_webapp

rust_axum/: .gitignore  Cargo.toml  Dockerfile
rust_axum/.github/workflows/: update-monorepo.yml
rust_axum/src/: lib.rs  main.rs  service.rs
rust_axum/src/service/app/: config.rs  connection.rs  responder.rs
rust_axum/src/service/controllers/: authentication_controller.rs  user_controller.rs
rust_axum/src/service/helpers/: jwt_helper.rs  utils.rs
rust_axum/src/service/middlewares/: auth_middleware.rs  common_middlewares.rs  route_logger.rs
rust_axum/src/service/models/: user_model.rs
rust_axum/src/service/routes/: authentication_route.rs  user_route.rs
