[package]
name = "sample_api"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
axum = { version = "0.7.7" }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
colored = { version = "2.1.0" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }
mongodb = { version = "3.1.0" }
dotenv = {version = "0.15.0"}
futures-util = "0.3.31"
json-web-token = "0.2.0"
reqwest = { version = "0.12.8", features = ["json"] }